force-app/main/default/objects/Activity/fields/Activity_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_2__c</fullName>
    <description>08/12/2010 VI: created to allow for reporting on standard Activity Type field in custom report types. Workflow rule copies value from standard field to this custom field.</description>
    <label>Activity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>