force-app/main/default/objects/Activity/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <formula>Account.BPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPID</label>
    <type>Text</type>
</CustomField>