force-app/main/default/objects/Activity/fields/Call_Report_Created__c.field-meta.xml
<CustomField>
    <fullName>Call_Report_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate whetehr the call report has been created on the event record or not</description>
    <label>Event Report</label>
    <type>Checkbox</type>
</CustomField>