force-app/main/default/objects/Activity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>SFP-10892 [c] Event Type is used for Reporting purposes, it replicates the Subject field on Events</description>
    <inlineHelpText>Specific type of Event</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Plan</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Call Program: Follow-up Call</fullName>
            </value>
            <value>
                <fullName>Call Program: Follow-up Meeting</fullName>
            </value>
            <value>
                <fullName>Complete Client Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Complete Credit Application</fullName>
            </value>
            <value>
                <fullName>Discuss Indicative Term Sheet with Client</fullName>
            </value>
            <value>
                <fullName>Discuss Quote/Proposal/RFP with Client</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Obtain Insurance Needs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Review and Update Client Profile/ Account Plan</fullName>
            </value>
            <value>
                <fullName>Review and Update Client Profile on CAMS</fullName>
            </value>
            <value>
                <fullName>Review and Update Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Spread Client Financials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>