force-app/main/default/objects/Activity/fields/Expected_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Expected_Outcome__c</fullName>
    <description>SFP-10892 [c] Field detailing what the outcome of the engagement was</description>
    <label>Expected Outcome</label>
    <type>TextArea</type>
</CustomField>