force-app/main/default/objects/Activity/fields/IsActionPlanTask__c.field-meta.xml
<CustomField>
    <fullName>IsActionPlanTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-9736: Field used in the backend and set by the Action Plan Task flow to differentiate between an Action Plan Task and any other tasks</description>
    <label>IsActionPlanTask</label>
    <type>Checkbox</type>
</CustomField>