force-app/main/default/objects/Activity/fields/Item_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Item_to_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-2169, US-2217 if value is checked the task should be displayed in Items to Action component</description>
    <inlineHelpText>Specify if task should be displayed in &apos;Items to Action&apos; on home screen</inlineHelpText>
    <label>Item to Action</label>
    <type>Checkbox</type>
</CustomField>