force-app/main/default/objects/Activity/fields/Meeting_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Purpose__c</fullName>
    <description>The specific type of meeting that was held internally or externally. E.g. An Internal meeting can be further defined as a core client team meeting or a day to day meeting</description>
    <inlineHelpText>The specific type of meeting that was held internally or externally. E.g. An Internal meeting can be further defined as a core client team meeting or a day to day meeting</inlineHelpText>
    <label>Meeting Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Meeting_Audience__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client Discussion/Insights</fullName>
            </value>
            <value>
                <fullName>Client Execution</fullName>
            </value>
            <value>
                <fullName>Client Pitch</fullName>
            </value>
            <value>
                <fullName>Client Road Show</fullName>
            </value>
            <value>
                <fullName>Client Service</fullName>
            </value>
            <value>
                <fullName>Client Training</fullName>
            </value>
            <value>
                <fullName>Core Client Team Meeting</fullName>
            </value>
            <value>
                <fullName>Day To Day Meeting</fullName>
            </value>
            <value>
                <fullName>Market Research Update</fullName>
            </value>
            <value>
                <fullName>NBAC Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>