force-app/main/default/objects/Activity/fields/Objective_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Objective_of_Engagement__c</fullName>
    <description>SFP-10892 [c] Field detailing the reason for communicating with a Client</description>
    <label>Objective of Engagement</label>
    <type>TextArea</type>
</CustomField>