force-app/main/default/objects/Activity/fields/PP_Phase__c.field-meta.xml
<CustomField>
    <fullName>PP_Phase__c</fullName>
    <description>SFP-4884 - Used to indicate what phase this tasks is in for the partner on-boarding process.</description>
    <inlineHelpText>Used to indicate what phase this tasks is in for the partner on-boarding process.</inlineHelpText>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>