force-app/main/default/objects/Activity/fields/PP_Sequence__c.field-meta.xml
<CustomField>
    <fullName>PP_Sequence__c</fullName>
    <description>SFP-4884 - Used to indicate what is the tasks sequence number for the partner on-boarding process.</description>
    <inlineHelpText>Used to indicate what is the tasks sequence number for the partner on-boarding process.</inlineHelpText>
    <label>Sequence #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>