force-app/main/default/objects/Activity/fields/PP_Step__c.field-meta.xml
<CustomField>
    <fullName>PP_Step__c</fullName>
    <description>SFP-4884 - The name of the on-boarding step.</description>
    <inlineHelpText>The name of the on-boarding step.</inlineHelpText>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PP_Phase__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit Application</fullName>
            </value>
            <value>
                <fullName>Verification by Standard Bank</fullName>
            </value>
            <value>
                <fullName>NDA Signed</fullName>
            </value>
            <value>
                <fullName>Business Engagement</fullName>
            </value>
            <value>
                <fullName>Risk Review</fullName>
            </value>
            <value>
                <fullName>Follow Up Risk Questions</fullName>
            </value>
            <value>
                <fullName>Commercials and Contracting</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>