force-app/main/default/objects/Activity/fields/Related_Event_Report__c.field-meta.xml
<CustomField>
    <fullName>Related_Event_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Event Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>