force-app/main/default/objects/Activity/fields/SA_Activity_Instigated__c.field-meta.xml
<CustomField>
    <fullName>SA_Activity_Instigated__c</fullName>
    <inlineHelpText>Was this client interaction initiated by the Client?</inlineHelpText>
    <label>Initiated by Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <color>#33CC00</color>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <color>#FF0000</color>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>