force-app/main/default/objects/Activity/fields/SA_Priority__c.field-meta.xml
<CustomField>
    <fullName>SA_Priority__c</fullName>
    <label>Event Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFFF66</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#33CC00</color>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>