force-app/main/default/objects/Activity/fields/SA_Related_to_Non_CIB_Client__c.field-meta.xml
<CustomField>
    <fullName>SA_Related_to_Non_CIB_Client__c</fullName>
    <inlineHelpText>Add your Non-CIB Client name manually (80 characters or less). Remember to relate this Activity to the Non-CIB Client for reporting</inlineHelpText>
    <label>Related To Non-CIB Client</label>
    <length>80</length>
    <type>Text</type>
</CustomField>