force-app/main/default/objects/Activity/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Changed from Short Description to Comments on Progress, case 652 (08/07/2011)</description>
    <inlineHelpText>Description of the progress that has been made on the Task; any issues, risks or comments raised (255 characters or less)</inlineHelpText>
    <label>Comments on Progress</label>
    <type>TextArea</type>
</CustomField>