force-app/main/default/objects/Activity/fields/SingletrackCMS__Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Activity_Date_Time__c</fullName>
    <label>Activity Date/Time</label>
    <type>DateTime</type>
</CustomField>