force-app/main/default/objects/Activity/fields/SingletrackCMS__Call_Log_Subject__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Call_Log_Subject__c</fullName>
    <label>Call Log Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>