force-app/main/default/objects/Activity/fields/SingletrackCMS__Client_Activity_Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Client_Activity_Participant_Id__c</fullName>
    <label>Interaction Participant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>