force-app/main/default/objects/Activity/fields/SingletrackCMS__Corporate_Event_List_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Corporate_Event_List_Contact_Id__c</fullName>
    <label>Corporate_Event_List_Contact_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>