force-app/main/default/objects/Activity/fields/SingletrackCMS__Primary_Company__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Primary_Company__c</fullName>
    <label>Primary Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>