force-app/main/default/objects/Activity/fields/SingletrackCMS__Roadshow_Feedback__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Roadshow_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roadshow Feedback</label>
    <type>Checkbox</type>
</CustomField>