force-app/main/default/objects/Activity/fields/SingletrackCMS__Roadshow_Slot_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Roadshow_Slot_Id__c</fullName>
    <label>Roadshow Slot Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>