force-app/main/default/objects/Activity/fields/SingletrackCMS__Summary__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>