force-app/main/default/objects/Activity/fields/SingletrackCMS__Voicemail__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Voicemail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if the call went to voicemail</inlineHelpText>
    <label>Voicemail</label>
    <type>Checkbox</type>
</CustomField>