force-app/main/default/objects/Activity/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>To make a hyperlink from the subject to the case C-00002295 and user story US-2600</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id ,Subject)</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>