force-app/main/default/objects/Activity/fields/thinkConnect__ANI__c.field-meta.xml
<CustomField>
    <fullName>thinkConnect__ANI__c</fullName>
    <label>ANI</label>
    <type>Phone</type>
</CustomField>