force-app/main/default/objects/Activity/fields/thinkConnect__DNIS__c.field-meta.xml
<CustomField>
    <fullName>thinkConnect__DNIS__c</fullName>
    <label>DNIS</label>
    <type>Phone</type>
</CustomField>