force-app/main/default/objects/Activity/fields/thinkConnect__UCID__c.field-meta.xml
<CustomField>
    <fullName>thinkConnect__UCID__c</fullName>
    <label>UCID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>