force-app/main/default/objects/Activity/fields/thinkConnect__ucidURL__c.field-meta.xml
<CustomField>
    <fullName>thinkConnect__ucidURL__c</fullName>
    <label>ucidURL</label>
    <type>Url</type>
</CustomField>