force-app/main/default/objects/Activity/fields/thinkConnect__UUI__c.field-meta.xml
<CustomField>
    <fullName>thinkConnect__UUI__c</fullName>
    <label>UUI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>