force-app/main/default/objects/Activity/fields/Visible_to_Internal_Attendees_only__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Internal_Attendees_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-3401 - Field used to restrict the apex sharing to the owner, internal attendees and their role hierarchy managers of the event report. Any other sharing will be removed if it already exists.</description>
    <inlineHelpText>Select this if you want to restrict the access of this event report to the internal attendees only.</inlineHelpText>
    <label>Visible to Internal Attendees only</label>
    <type>Checkbox</type>
</CustomField>