force-app/main/default/objects/Activity/listViews/Emails.listView-meta.xml
<ListView>
    <fullName>Emails</fullName>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.TYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Task.Tasks_All_Users</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>startsWith</operation>
        <value>Email</value>
    </filters>
    <label>Emails</label>
</ListView>