force-app/main/default/objects/Activity/listViews/SingletrackCMS__MyActivities.listView-meta.xml
<ListView>
    <fullName>SingletrackCMS__MyActivities</fullName>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
</ListView>